Integrated perennial rice into DSSAT-CSM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,6 +296,9 @@ set(
         "Plant/CERES-Rice/RI_Tillsub.for"
         "Plant/CERES-Rice/RI_Transpl_g.for"
         "Plant/CERES-Rice/RI_Transpl_p.for"
+        "Plant/CERES-RN-Rice/RN_RICE.for" 
+        "Plant/CERES-RN-Rice/RN_Grosub.for"
+        "Plant/CERES-RN-Rice/RN_Phenol.for"
         "Plant/CERES-TEFF/TEFF.for"
         "Plant/CERES-TEFF/TEFF_Grosub.for"
         "Plant/CERES-TEFF/TEFF_Ipcrop.for"
